# orbit-launcher

./: .coderabbit.yaml  .gitignore  CONTEXT.md  Dockerfile  LICENSE  Orbit_Launcher_Presentation.pptx  Orbit_Launcher_Report.docx  README.md  design.md  docker-compose.yml  microsoft-store-audit.md  package-lock.json  package.json  presentation.md  railway.toml  sonar-project.properties  tailwind.config.js  test-output-backend.txt  test-output-frontend.txt  tsconfig.tsbuildinfo
.cursor/rules/: electron-workflow.mdc  frontend-security.mdc  minimal-changes.mdc  no-workarounds.mdc
.github/workflows/: dev-desktopapp.yml  dev-mobileapp.yml  dev.yml  prod.yml  qa.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  alembic.ini  database.py  db_migrate.py  index.js  job_queue.py  limiter.py  main.py  package-lock.json  package.json  railway.toml  requirements.in  requirements.txt  start.sh  utils.py  worker.py
backend/alembic/: env.py
docs/: capacitor.md  design.md
frontend/: .env.electron.example  .env.example  capacitor.config.ts  electron-builder.ci.config.cjs  electron-builder.config.cjs  electron-builder.pack.config.cjs  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  remio-stderr.txt  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: dev-local.ps1
src/: App.tsx  index.css  main.tsx  types.ts
(+398 files in other folders)
