[package]
name = "remio"
version = "0.1.0"
description = "Remio — Track, manage, and launch all your subscriptions and tools in one place."
authors = ["Remio <support@remiolauncher.com>"]
license = "MIT"
repository = "https://github.com/Aruntejavemula/orbit-launcher"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
